--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,7 +40,7 @@ jobs:
 
     # Optional: Security Tests (e.g., Trivy)
     - name: Run Security Tests
-      uses: aquasecurity/trivy-action@v0.28.0
+      uses: aquasecurity/trivy-action@master
       with:
         scan-type: fs
         severity: HIGH,CRITICAL
