--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,7 @@ jobs:
     # Initialize and apply Terraform configuration
     - name: Terraform Init and Apply
       run: |
-        cd terraform
+        cd WebGoat-main/terraform
         terraform init
         terraform apply -auto-approve
 
@@ -36,8 +36,8 @@ jobs:
     # Deploy to Kubernetes
     - name: Deploy to Kubernetes
       run: |
-        kubectl apply -f kubernetes/deployment.yml
-        kubectl apply -f kubernetes/service.yml
+        kubectl apply -f WebGoat-main/kubernetes/deployment.yml
+        kubectl apply -f WebGoat-main/kubernetes/service.yml
 
     # Run security tests using Trivy
     - name: Run Security Tests
