--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,6 +20,14 @@ jobs:
       with:
         terraform_version: 1.5.7
 
+    # Set up Kubeconfig
+    - name: Set up Kubeconfig
+      run: echo "${{ secrets.KUBECONFIG_CONTENT }}" > ~/.kube/config
+
+    # Export KUBECONFIG path
+    - name: Export KUBECONFIG
+      run: export KUBECONFIG=~/.kube/config
+
     # Initialize and apply Terraform configuration
     - name: Terraform Init and Apply
       run: |
