--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,9 @@ jobs:
 
     # Set up Kubeconfig
     - name: Set up Kubeconfig
-      run: echo "${{ secrets.KUBECONFIG_CONTENT }}" > ~/.kube/config
+      run: |
+        mkdir -p ~/.kube
+        echo "${{ secrets.KUBECONFIG_CONTENT }}" > ~/.kube/config
 
     # Export KUBECONFIG path
     - name: Export KUBECONFIG
