--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,19 +1,29 @@
-name: CI/CD Pipeline
- 
+name: Deploy WebGoat
+
 on:
   push:
     branches:
       - main
+  workflow_dispatch:  # Allows manual trigger
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-    # Checkout the repository code
     - name: Checkout Code
       uses: actions/checkout@v3
 
-    # Run security tests using Trivy first
+    - name: Set up JDK
+      uses: actions/setup-java@v3
+      with:
+        java-version: '17'
+        distribution: 'temurin'
+        cache: 'maven'
+
+    - name: Build with Maven
+      run: |
+        ./mvnw clean package -DskipTests
+
     - name: Run Security Tests
       uses: aquasecurity/trivy-action@master
       with:
@@ -22,59 +32,62 @@ jobs:
         ignore-unfixed: true
         format: 'table'
 
-    # Set up Docker
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
 
-    # Build and push Docker image
     - name: Build Docker image
       run: |
-        ls -la  # List files to verify path
-        cd WebGoat-main  # Change to WebGoat-main directory
-        docker build -t webgoat/webgoat-8.0 -f Dockerfile .
-        # If you want to push to a registry, add docker login and push commands here
+        docker build -t webgoat/webgoat:latest .
 
-    # Set up Kubernetes config
     - name: Set up Kubeconfig
       run: |
         mkdir -p ~/.kube
         echo "${{ secrets.KUBECONFIG_CONTENT }}" > ~/.kube/config
         chmod 600 ~/.kube/config
       
-    # Verify Kubernetes connection
     - name: Verify Kubernetes Connection
       run: |
         kubectl cluster-info
         kubectl get nodes
 
-    # Set up Terraform
     - name: Set up Terraform
       uses: hashicorp/setup-terraform@v2
       with:
         terraform_version: 1.5.7
 
-    # Initialize and apply Terraform
     - name: Terraform Init and Apply
       run: |
-        cd WebGoat-main/terraform  # Update path
+        cd terraform
         terraform init
         terraform apply -auto-approve
 
-    # Deploy to Kubernetes
     - name: Deploy to Kubernetes
       run: |
-        cd WebGoat-main/kubernetes  # Update path
+        cd kubernetes
         kubectl apply -f deployment.yml
         kubectl apply -f service.yml
         
-    # Verify deployment
-    - name: Verify Deployment
+    - name: Debug Info
       run: |
+        echo "Current directory contents:"
+        ls -la
+        echo "Terraform directory contents:"
+        ls -la terraform/
+        echo "Kubernetes directory contents:"
+        ls -la kubernetes/
+        echo "Kubernetes resources:"
+        kubectl get all -n webgoat
         kubectl get pods -n webgoat
         kubectl get services -n webgoat
         kubectl get deployments -n webgoat
 
-    # Optional: Add deployment check
-    - name: Check Deployment Status
+    - name: Wait for Deployment
       run: |
         kubectl wait --for=condition=available deployment/webgoat -n webgoat --timeout=300s
+        kubectl get pods -n webgoat -o wide
+
+    - name: Port Forward (Optional)
+      run: |
+        kubectl port-forward -n webgoat svc/webgoat-service 8080:8080 &
+        sleep 10
+        curl http://localhost:8080 || true
